# RPSBattleSimulator

./: CMakeLists.txt  README.md  logic.h  main.cpp  object.h  settings.h
include/glad/: glad.h
